# VideoMatting

./: README.md
OpenVINO配置/: openVINO2021_VS2019.props
RVM_infer/: inference.py  requirements.txt  运行示例.md
RVM_infer/dataset/: videomatte.py
RVM_lite.ai.toolkit_Window_1.0/: CMakeLists.txt  main.cpp
RVM_lite.ai.toolkit_Window_1.0/lite.ai.toolkit/include/lite/: config.h  types.h
RVM_lite.ai.toolkit_Window_1.0/lite.ai.toolkit/lib/: opencv_core453d.lib
compile_lite_Window/: CMakeLists.txt  README.md
compile_lite_Window/lib/: TNN.lib  opencv_highgui453d.lib  opencv_imgcodecs453d.lib
compile_lite_Window/lite/ncnn/cv/: ncnn_mobilenetv2_68.cpp  ncnn_mobilenetv2_se_68.cpp  ncnn_nanodet.cpp  ncnn_nanodet_efficientnet_lite.cpp  ncnn_nanodet_efficientnet_lite_depreciated.cpp
train_demo/: requirements.txt  train.py  train_config.py  简易训练介绍.md
train_demo/dataset/: youtubevis.py
train_demo/matting-data/YouTubeVIS/train/: instances_demo.json
train_demo/matting-data/coco/annotations/: panoptic_train2017_demo.json
编译库文件_lite_Window/: README.md
编译库文件_lite_Window/lib/: opencv_videoio453d.lib
编译库文件_lite_Window/lite/ncnn/cv/: ncnn_face_landmarks_1000.cpp  ncnn_nanodet_depreciated.cpp  ncnn_nanodet_plus.cpp  ncnn_pfld.cpp  ncnn_pfld68.cpp  ncnn_pfld98.cpp  ncnn_yolov5.cpp
